[gd_scene load_steps=4 format=3 uid="uid://de5dhmkfqssk0"]

[ext_resource type="Script" uid="uid://c6qajqieppk4" path="res://source/ui/diplomacy/country_relationship_node.gd" id="1_5nc17"]
[ext_resource type="PackedScene" uid="uid://s68xdpyt6mng" path="res://source/ui/diplomacy/diplomacy_action_button.tscn" id="2_6n4bc"]
[ext_resource type="PackedScene" uid="uid://cvxd6jpgibm68" path="res://source/ui/diplomacy/relationship_info.tscn" id="2_h1qdk"]

[node name="CountryRelationship" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_5nc17")
diplomacy_action_button_scene = ExtResource("2_6n4bc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_right = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.2, 0.216667, 0.25, 1)

[node name="Container" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="DataContainer" type="VBoxContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Preset" parent="Container/DataContainer" instance=ExtResource("2_h1qdk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3

[node name="GrantsMilitaryAccess" type="HBoxContainer" parent="Container/DataContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="GrantsMilitaryAccessTitle" type="Label" parent="Container/DataContainer/GrantsMilitaryAccess"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Grants military access:"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="GrantsMilitaryAccessInfo" parent="Container/DataContainer/GrantsMilitaryAccess" instance=ExtResource("2_h1qdk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="IsTrespassing" type="HBoxContainer" parent="Container/DataContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="IsTrespassingTitle" type="Label" parent="Container/DataContainer/IsTrespassing"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Is trespassing:"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="IsTrespassingInfo" parent="Container/DataContainer/IsTrespassing" instance=ExtResource("2_h1qdk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="IsFighting" type="HBoxContainer" parent="Container/DataContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="IsFightingTitle" type="Label" parent="Container/DataContainer/IsFighting"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Is fighting:"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="IsFightingInfo" parent="Container/DataContainer/IsFighting" instance=ExtResource("2_h1qdk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionsContainer" type="VBoxContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Container/ActionsContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Available actions:"
vertical_alignment = 2

[node name="AvailableActions" type="VBoxContainer" parent="Container/ActionsContainer"]
unique_name_in_owner = true
layout_mode = 2
